--- a/PrimaryPipelineSetup/assets/CSS/styles.css
+++ b/PrimaryPipelineSetup/assets/CSS/styles.css
@@ -20,6 +20,36 @@ header {
     text-align: center;
     font-size: 1.5em;
 }
+h1 {
+    color: whitesmoke;
+    font-size: 2.5em;
+    margin: 10px 0 15px 0;
+    padding: 0;
+}
+
+h2{
+    color: #060A3D;
+    font-size: 1.6em;
+    margin: 10px 0 10px 0;
+}
+
+h3{
+    color: #004593;
+    font-size: 1.3em;
+    margin: 8px 0 8px 0;
+}
+
+h4{
+    color: #1D74FF;
+    font-size: 1.2em;
+    margin: 5px 0 5px 0;
+}
+
+h5 {
+    color: #FF6E00;
+    font-size: 1.2em;
+    margin: 3px 0 3px 0;
+}
 
 mark{ 
     background-color: #f7fafceb;
@@ -262,7 +292,6 @@ button{
     overflow-x: hidden;
     overflow-y: auto;
     height: auto;
-
 }
 
 .ref-img {
@@ -276,4 +305,58 @@ button{
     display: grid;
     grid-template-columns: 1fr 4fr;
     
+}
+
+figure {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 10px;
+    padding: 0;
+}
+  
+  figcaption {
+    color: #3D3F41;
+    text-align:justify;
+    font-size:0.7em ;
+  }
+
+figure img {
+  max-width: 100%;
+  max-height: auto;
+}
+
+table, th, td {
+    border: 1px solid #004593;
+    border-collapse: collapse;
+    padding: 10px;
+    text-align: left;
+    font-size: 14px;
+}
+th {
+    background-color: #004593;
+    color: white;
+}
+td {
+    background-color:none;
+}
+td:hover {
+    background-color: #FF6E00;
+    color: whitesmoke;
+    font-weight: bold;
+    transition: 0.2s;
+}
+
+table {
+    width: 100%;
+    border-radius: 10px;
+    overflow: hidden;
+    margin-bottom: 20px;
+}
+
+table ul,table li{
+    padding: 0.5em;
+    margin: 0;
+    list-style: none;
 }
