--- a/PrimaryPipelineSetup/assets/CSS/styles.css
+++ b/PrimaryPipelineSetup/assets/CSS/styles.css
@@ -646,3 +646,16 @@ div.scroll-container {
     font-size: 1em;
     height:100%
 }
+
+.alert-reference{
+    display: none;
+    color: #3c763d;
+    background-color: #dff0d8;
+    border-color: #d6e9c6;
+    border-radius: 5px;
+    padding: 10px;
+}
+
+.alert-reference b{
+    font-weight: bold;
+}
