--- a/PrimaryPipelineSetup/assets/CSS/styles.css
+++ b/PrimaryPipelineSetup/assets/CSS/styles.css
@@ -123,9 +123,14 @@ hr {
     flex-direction: column;
     margin:3px;
     width: 100%;
-    border-radius: 10px;
-    
+    border-radius: 10px; 
 }
+
+.content-area{
+    padding-bottom: 150px;
+}
+
+
 h2{
     color: #060A3D;
     font-size: 1.6em;
@@ -655,4 +660,21 @@ div.scroll-container {
     color: white;
     font-size: 1em;
     height:100%
+}
+
+.footer {
+   position: fixed;
+   left: 0;
+   bottom: 0;
+   width: 100%;
+   background-color: #004593;
+   color: white;
+   text-align: center;
+   font-size: 10px;
+   margin: 3px;
+   border-radius: 0px 0px 10px 10px;
+}
+
+.footer a{
+    color: white;
 }
